objects/EFX__efax__c.object
<CustomObject>
    <fields>
        <fullName>ACLS_Failure_Reason__c</fullName>
        <label>Failure Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EFX__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>eFaxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EFX__Billing_Code__c</fullName>
        <label>Billing Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFX__CSID__c</fullName>
        <description>The CSID provided by the receiving fax machine.</description>
        <inlineHelpText>The CSID provided by the receiving fax machine.</inlineHelpText>
        <label>CSID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFX__Client_Name__c</fullName>
        <label>Client Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFX__Code__c</fullName>
        <label>Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFX__Date_Time__c</fullName>
        <label>Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EFX__From_Cover_Page__c</fullName>
        <description>The from value entered by the user in the cover page of the efax.</description>
        <inlineHelpText>The from value entered by the user in the cover page of the efax.</inlineHelpText>
        <label>From</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFX__From__c</fullName>
        <label>From</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFX__Id__c</fullName>
        <label>Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFX__Last_Updated__c</fullName>
        <description>The date and time this fax’s details was last refreshed from eFax.</description>
        <inlineHelpText>The date and time this fax’s details was last refreshed from eFax.</inlineHelpText>
        <label>Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EFX__Matter__c</fullName>
        <label>Matter</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFX__Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EFX__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>eFaxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EFX__Page__c</fullName>
        <label>Page</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EFX__Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Fax</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Contact.Fax</field>
                <operation>notEqual</operation>
                <value>null</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>eFaxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EFX__Refrence_Id__c</fullName>
        <label>Refrence Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFX__Resolution__c</fullName>
        <label>Resolution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Fine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EFX__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>COMPLETE</fullName>
                </value>
                <value>
                    <fullName>ERROR</fullName>
                </value>
                <value>
                    <fullName>NEW</fullName>
                </value>
                <value>
                    <fullName>IN PROGRESS</fullName>
                </value>
                <value>
                    <fullName>STORED</fullName>
                </value>
                <value>
                    <fullName>NOT_STORED</fullName>
                </value>
                <value>
                    <fullName>CANCELLED</fullName>
                </value>
                <value>
                    <fullName>PENDING CANCEL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EFX__Subject__c</fullName>
        <label>Subject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFX__TSID__c</fullName>
        <label>TSID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFX__To__c</fullName>
        <label>To</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>EFX__eFax_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The unique id assigned by efax.</description>
        <externalId>true</externalId>
        <inlineHelpText>The unique id assigned by efax.</inlineHelpText>
        <label>Fax ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EFX__eFax_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>eFax Line</label>
        <referenceTo>EFX__eFax_Line__c</referenceTo>
        <relationshipLabel>Faxes</relationshipLabel>
        <relationshipName>Faxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Fax</label>
    <listViews>
        <fullName>EFX__Received_Faxes</fullName>
        <columns>NAME</columns>
        <columns>EFX__From_Cover_Page__c</columns>
        <columns>EFX__eFax_Id__c</columns>
        <columns>EFX__Page__c</columns>
        <columns>EFX__To__c</columns>
        <columns>EFX__TSID__c</columns>
        <columns>EFX__Status__c</columns>
        <columns>EFX__Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EFX__efax__c.EFX__Received_Fax</value>
        </filters>
        <label>Received Faxes</label>
    </listViews>
    <listViews>
        <fullName>EFX__Sent_Faxes</fullName>
        <columns>NAME</columns>
        <columns>EFX__From__c</columns>
        <columns>EFX__To__c</columns>
        <columns>EFX__Primary_Contact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EFX__efax__c.EFX__Sent_Fax</value>
        </filters>
        <label>Sent Faxes</label>
    </listViews>
    <nameField>
        <displayFormat>FX-{00}</displayFormat>
        <label>efax Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Faxes</pluralLabel>
    <recordTypes>
        <fullName>EFX__Received_Fax</fullName>
        <active>true</active>
        <label>Received Fax</label>
    </recordTypes>
    <recordTypes>
        <fullName>EFX__Sent_Fax</fullName>
        <active>true</active>
        <label>Sent Fax</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>